POM Configuration + enable preview + set Java version